--- a/src/_view/_css/V_Main.css
+++ b/src/_view/_css/V_Main.css
@@ -8,7 +8,13 @@
         padding: 0;
         box-sizing: border-box;
         --yellow: hsla(59, 100%, 60%, 1);
+        --yellow-light: hsla(59, 100%, 80%, 1);
+        --blue: hsla(240, 100%, 60%, 1);
+        --blue-light: hsla(240, 100%, 80%, 1);
+        --red: hsla(0, 100%, 60%, 1);
+        --red-light: hsla(0, 100%, 80%, 1);
         --black: hsla(223, 30%, 5%, 1);
+        --black-light: hsla(223, 30%, 15%, 1);
         --blue-dark: hsla(231, 81%, 8%, 1);
         --violet: hsla(257, 62%, 20%, 1);
         --ivory: hsla(65, 43%, 95%, 1);
@@ -37,10 +43,47 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 5px;
         flex-grow: 1;
         color: var(--ivory);
         font-family: Montserrat;
         font-size: 1em;
+    }
+    #title-bar h1 img {
+        padding: 10px;
+    }
+    #title-bar .ctr-button {
+        width: 60px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 0.25s;
+    }
+    #title-bar .ctr-button[id="min"]:hover { background-color: var(--blue-light); }
+    #title-bar .ctr-button[id="max"]:hover { background-color: var(--yellow-light); }
+    #title-bar .ctr-button[id="clo"]:hover { background-color: var(--red-light);; }
+/****/
+/* Área de Conteúdo */
+    #content-area {
+        flex-grow: 1;
+        background-color: brown;
+        display: flex;
+        flex-direction: row;
+    }
+    #folder-panel {
+        width: 270px;
+        background-color: coral;
+    }
+    #editor-panel {
+        position: relative;
+        flex-grow: 1;
+    }
+    #editor-panel #editor {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        font-size: 1.25em;
     }
 /****/
