--- a/src/_view/_css/V_Main.css
+++ b/src/_view/_css/V_Main.css
@@ -17,6 +17,7 @@
         --black-light: hsla(223, 30%, 15%, 1);
         --black-lighter: hsla(223, 30%, 25%, 1);
         --black-pluslighter: hsla(223, 20%, 35%, 1);
+        --black-evmolighter: hsla(223, 20%, 75%, 1);
         --blue-dark: hsla(231, 81%, 8%, 1);
         --violet: hsla(257, 62%, 20%, 1);
         --violet-light: hsla(257, 62%, 30%, 1);
@@ -27,7 +28,7 @@
         margin: 0;
         user-select: none;
         font-family: Montserrat;
-        background-color: var(--ivory);
+        background-color: var(--black-pluslighter);
     }
     #wrap {
         width: 100%;
@@ -73,7 +74,7 @@
         display: flex;
         flex-direction: row;
         --folder-panel-w: 270px;
-        --footer-bars-w: 25px;
+        --footer-bars-w: 30px;
     }
     #folder-panel {
         display: flex;
@@ -82,9 +83,9 @@
         border-right: 5px solid var(--black);
     }
     #root-folder {
-        padding: 15px;
+        padding: 10px;
         color: var(--ivory);
-        font-size: 1.2em;
+        font-size: 1.1em;
         text-align: center;
         background-color: var(--black-light);
         border-bottom: 5px solid var(--black);
@@ -96,8 +97,20 @@
     #operation-bar {
         width: 100%;
         height: var(--footer-bars-w);
+        display: flex;
+        flex-direction: row;
         background-color: var(--black);
     }
+    #operation-bar > *{
+        flex-grow: 1;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+    #operation-bar > *:hover { background-color: var(--black-lighter); }
     #editor-panel {
         display: flex;
         flex-direction: column;
@@ -123,7 +136,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 7px 15px;
+        padding: 4px 12px;
         color: var(--ivory);
         font-weight: 550;
         background-color: var(--black-lighter);
@@ -156,6 +169,26 @@
     #status-bar {
         width: 100%;
         height: var(--footer-bars-w);
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
         background-color: var(--black);
     }
+    #status-bar > * {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0 15px;
+    }
+    #line-count, #column-count {
+        color: var(--black-evmolighter);
+        font-size: 0.9em;
+        font-weight: 600;
+    }
+    #view-graphic {
+        padding: 0 15px;
+        cursor: pointer;
+    }
+    #view-graphic:hover { background-color: var(--black-lighter); }
 /****/
