--- a/src/_view/_css/V_MainWindow.css
+++ b/src/_view/_css/V_MainWindow.css
@@ -236,8 +236,17 @@
         flex-grow: 1;
         position: relative;
     }
+    #ace-container iframe {
+        position: absolute;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        border: none;
+        background-color: white;
+    }
     #ace-editor {
         position: absolute;
+        z-index: 1;
         top: 0;
         right: 0;
         left: 0;
@@ -260,6 +269,10 @@
         padding: 0 15px;
     }
     #line-count, #column-count {
+        width: 110px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         color: var(--black-evmolighter);
         font-size: 0.9em;
         font-weight: 600;
@@ -269,4 +282,5 @@
         cursor: pointer;
     }
     #view-graphic:hover { background-color: var(--black-lighter); }
+    #view-graphic.selected { background-color: var(--violet-light); }
 /****/
